Se agrega parametro al endpoint de Books, facets is true, devuelve libros y facets